updates and changes