@@ -3,89 +3,68 @@ package com.example.resinjewelrystore.config;
 import com.example.resinjewelrystore.model.*;
 import com.example.resinjewelrystore.repository.CustomerRepository;
 import com.example.resinjewelrystore.repository.ProductRepository;
-import com.example.resinjewelrystore.repository.OrderRepository;
-import org.springframework.stereotype.Component;
-import org.springframework.transaction.annotation.Transactional;
-
 import jakarta.annotation.PostConstruct;
-import java.time.LocalDateTime;
-import java.util.Arrays;
+import org.springframework.stereotype.Component;
 import java.util.List;
+import java.util.Random;
 
 @Component
 public class JewelryDataLoader {
 
     private final ProductRepository productRepository;
     private final CustomerRepository customerRepository;
-    private final OrderRepository orderRepository;
+    private final Random random = new Random();
 
-    public JewelryDataLoader(ProductRepository productRepository,
-                             CustomerRepository customerRepository,
-                             OrderRepository orderRepository) {
+    public JewelryDataLoader(ProductRepository productRepository, CustomerRepository customerRepository) {
         this.productRepository = productRepository;
         this.customerRepository = customerRepository;
-        this.orderRepository = orderRepository;
     }
 
-    @Transactional
     @PostConstruct
     public void loadData() {
-        // --- Sample Products ---
-        if (productRepository.count() == 0) {
-            ResinRing ring = new ResinRing();
-            ring.setName("Golden Glitter Ring");
-            ring.setMaterial("Resin");
-            ring.setPrice(25.0);
 
-            ResinNecklace necklace = new ResinNecklace();
-            necklace.setName("Ocean Blue Necklace");
-            necklace.setMaterial("Resin");
-            necklace.setPrice(35.0);
+        // 1️⃣ Create products
+        Product necklace = new ResinNecklace();
+        necklace.setName("Ocean Blue Necklace");
+        necklace.setMaterial("Resin");
+        necklace.setPrice(35.0);
 
-            ResinBracelet bracelet = new ResinBracelet();
-            bracelet.setName("Sunset Pink Bracelet");
-            bracelet.setMaterial("Resin");
-            bracelet.setPrice(30.0);
+        Product ring = new ResinRing();
+        ring.setName("Golden Glitter Ring");
+        ring.setMaterial("Resin");
+        ring.setPrice(25.0);
 
-            ResinEarrings earrings = new ResinEarrings();
-            earrings.setName("Silver Sparkle Earrings");
-            earrings.setMaterial("Resin");
-            earrings.setPrice(28.0);
+        Product bracelet = new ResinBracelet();
+        bracelet.setName("Sunset Pink Bracelet");
+        bracelet.setMaterial("Resin");
+        bracelet.setPrice(30.0);
 
-            productRepository.saveAll(Arrays.asList(ring, necklace, bracelet, earrings));
+        Product earrings = new ResinEarrings();
+        earrings.setName("Silver Sparkle Earrings");
+        earrings.setMaterial("Resin");
+        earrings.setPrice(28.0);
+
+        // Save products first
+        List<Product> savedProducts = productRepository.saveAll(List.of(necklace, ring, bracelet, earrings));
+
+        // 2️⃣ Create customers with random carts
+        createCustomerWithRandomCart("Alice Smith", "alice@example.com", savedProducts);
+        createCustomerWithRandomCart("Bob Johnson", "bob@example.com", savedProducts);
+        createCustomerWithRandomCart("Carol Davis", "carol@example.com", savedProducts);
+    }
+
+    private void createCustomerWithRandomCart(String name, String email, List<Product> products) {
+        Customer customer = new Customer();
+        customer.setName(name);
+        customer.setEmail(email);
+
+        // Add 1-3 random products to the cart
+        int numItems = random.nextInt(3) + 1;
+        for (int i = 0; i < numItems; i++) {
+            Product product = products.get(random.nextInt(products.size()));
+            customer.addToCart(product);
         }
 
-        List<Product> products = productRepository.findAll();
-
-        // --- Sample Customers with pre-filled carts ---
-        Customer alice = customerRepository.findByEmail("alice@example.com");
-        if (alice == null) {
-            alice = new Customer();
-            alice.setName("Alice Johnson");
-            alice.setEmail("alice@example.com");
-            alice.setCart(Arrays.asList(products.get(0), products.get(1))); // ring + necklace
-            customerRepository.save(alice);
-        }
-
-        Customer bob = customerRepository.findByEmail("bob@example.com");
-        if (bob == null) {
-            bob = new Customer();
-            bob.setName("Bob Smith");
-            bob.setEmail("bob@example.com");
-            bob.setCart(Arrays.asList(products.get(2), products.get(3))); // bracelet + earrings
-            customerRepository.save(bob);
-        }
-
-
-        boolean aliceHasOrders = orderRepository.existsByCustomerEmail("alice@example.com");
-        if (!aliceHasOrders) {
-            Order order = new Order();
-            order.setCustomer(alice);
-            order.setProducts(alice.getCart());
-            order.setTotalAmount(alice.getCart().stream().mapToDouble(Product::getPrice).sum());
-            order.setStatus(OrderStatus.PENDING);
-            order.setOrderDate(LocalDateTime.now());
-            orderRepository.save(order);
-        }
+        customerRepository.save(customer); // ✅ Safe now, no detached entity error
     }
 }
